Fix visibility of nav icon when opened and closed

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -8,7 +8,9 @@ h3,
 h4,
 h5,
 h6,
-p {
+li,
+p,
+ul {
   margin: 0;
   margin-block-start: 0;
   margin-block-end: 0;
